# ComfyUI-Enhancement-Utils

./: CLAUDE.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
monitor/: __init__.py  collector.py  gpu.py  hardware.py  routes.py
nodes/: __init__.py  image_load_subfolders.py  play_sound.py  system_notification.py
profiler/: __init__.py  hooks.py
web/js/: graphArrange.js  nodeNavigation.js  nodeProfiler.js  playSound.js  resourceMonitor.css  resourceMonitor.js  systemNotification.js  utils.js
web/js/lib/: elk.bundled.min.js
